adding more todo comments

--- a/usersettings.json
+++ b/usersettings.json
@@ -5,9 +5,9 @@
   "window.zoomLevel": 0,
   "workbench.startupEditor": "newUntitledFile",
   "diffEditor.ignoreTrimWhitespace": true,
-  "workbench.colorTheme": "Base16 Tomorrow Dark",
-  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "Base16 Tomorrow Dark", //TODO: install this package
+  "workbench.iconTheme": "material-icon-theme", //TODO: Install this package
   "window.title": "${dirty}${rootName}",
-  "window.titleBarStyle":"custom" // Install: GTK Dark Title Bar
+  "window.titleBarStyle":"custom" // TODO: Install: GTK Dark Title Bar
   // TODO: set the terminal to WSL
 }
