--- a/usersettings.json
+++ b/usersettings.json
@@ -1,9 +1,10 @@
 {
   // TODO: install the "vim" package published by the user "vscodevim"
+  // TODO: install the  "JSON Tools" package published by the user "Erik Lynd"
   // "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe", //TODO: uncomment this line if using windows 10
 
   "workbench.colorTheme": "Base16 Tomorrow Dark", //TODO: Install this package
-  "workbench.iconTheme": "vs-nomo-dark", //TODO: Install this package
+  "workbench.iconTheme": "vs-nomo-dark",
   "workbench.startupEditor": "none",
 
   "window.title": "${dirty}${rootName}",
