--- a/usersettings.json
+++ b/usersettings.json
@@ -1,6 +1,7 @@
 {
   // TODO: install the "vim" package published by the user "vscodevim"
   // TODO: install the  "JSON Tools" package published by the user "Erik Lynd"
+  // TODO: install the "Active File In StatusBar" by the user RoscoP
   // "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe", //TODO: uncomment this line if using windows 10
 
   "workbench.colorTheme": "Base16 Tomorrow Dark", //TODO: Install this package
