--- a/usersettings.json
+++ b/usersettings.json
@@ -1,4 +1,5 @@
 {
+  // TODO: install the "Reveal File In Folder" package published by the user "Molunerfinn"
   // TODO: install the "vim" package published by the user "vscodevim"
   // TODO: install the  "JSON Tools" package published by the user "Erik Lynd"
   // "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe", //TODO: uncomment this line if using windows 10
