--- a/usersettings.json
+++ b/usersettings.json
@@ -3,6 +3,7 @@
   // TODO: install the  "JSON Tools" package published by the user "Erik Lynd"
   // TODO: install the "vim" package published by the user "vscodevim"
   // TODO: install the "Better Comments" package published by the user "Aaron Bond"
+  // TODO: install the "Todo Tree" package published by the user "Gruntfuggly"
 
   // Workbench
   "workbench.colorTheme": "Ocean-Dark-Soda", // TODO: Install this package
