--- a/usersettings.json
+++ b/usersettings.json
@@ -1,6 +1,6 @@
 {
   // "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe", //TODO: uncomment this line if using windows 10
-  // TODO: install the  "JSON Tools" package published by the user "Erik Lynd"
+  // TODO: install the  "Markdown Shortcuts" package published by the user "mdickin"
   // TODO: install the "vim" package published by the user "vscodevim"
   // TODO: install the "Better Comments" package published by the user "Aaron Bond"
   // TODO: install the "Todo Tree" package published by the user "Gruntfuggly"
