--- a/usersettings.json
+++ b/usersettings.json
@@ -6,8 +6,15 @@
   // TODO: install the "Todo Tree" package published by the user "Gruntfuggly"
 
   // Workbench
+  "workbench.iconTheme": "city-lights-icons-vsc-light", //TODO: install city lights icon package
   "workbench.colorTheme": "Ocean-Dark-Soda", // TODO: Install this package
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.editor.enablePreview": false,
+  "workbench.sideBar.location": "left",
   "workbench.startupEditor": "none",
+
+
+
 
   // Unsorted
   "window.title": "${dirty}${rootName} ${dirty}",
@@ -27,8 +34,6 @@
 
   // Javascript
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "workbench.sideBar.location": "left",
-  "workbench.editor.enablePreview": false,
-  "workbench.editor.enablePreviewFromQuickOpen": false,
+
 
 }
