--- a/usersettings.json
+++ b/usersettings.json
@@ -1,12 +1,8 @@
 {
-  // "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe", //TODO: uncomment this line if using windows 10
-  // TODO: install the  "Markdown Shortcuts" package published by the user "mdickin"
   // TODO: install the "vim" package published by the user "vscodevim"
-  // TODO: install the "Better Comments" package published by the user "Aaron Bond"
-  // TODO: install the "Todo Tree" package published by the user "Gruntfuggly"
 
   // Workbench
-  "workbench.iconTheme": "city-lights-icons-vsc-light", //TODO: install city lights icon package
+  "workbench.iconTheme": "vscode-seedling-icon-theme", //TODO: install seedling icon theme
   "workbench.colorTheme": "Ocean-Dark-Soda", // TODO: Install this package
   "workbench.editor.enablePreviewFromQuickOpen": false,
   "workbench.editor.enablePreview": false,
