--- a/usersettings.json
+++ b/usersettings.json
@@ -26,6 +26,7 @@
   "editor.overviewRulerBorder": false,
   "editor.quickSuggestionsDelay": 100,
   "editor.lineNumbers": "interval",
+  "editor.rulers": [110],
   // Minimap
   "editor.minimap.renderCharacters": false,
   "editor.minimap.showSlider": "always",
