--- a/usersettings.json
+++ b/usersettings.json
@@ -1,40 +1,62 @@
 {
-  // TODO: bind ctrl + n to "File: New File", instead of "File : New Untitled File". This lets you create and a new file in the explorer.
-  // TODO: install the "vim" package published by "vscodevim"
-  // TODO: install the "Ocean-Dark-Soda" theme published by "gerane"
+  // TODO: bind ctrl + n to "File: New File", instead of "File : New Untitled File". This lets you create a new file in the explorer folder currently focused on.
+  
+  // TODO: install icon pack: "Easy Icon Theme"
+  // TODO: install theme "Ocean-Dark-Soda"
+
+  // TODO: install extension "Visual Studio Intellicode"
+  // TODO: install extension "Auto Hide"
+  // TODO: install extension "Bookmarks"
+  // TODO: install extension "GitLens"
+  // TODO: install extension "Vim"
+  
+  // TODO: install linting extensions
+
   // Workbench
   "workbench.editor.enablePreviewFromQuickOpen": false,
-  "workbench.list.horizontalScrolling": true,
   "workbench.colorTheme": "Ocean-Dark-Soda",
   "workbench.editor.enablePreview": false,
-  "workbench.editor.labelFormat": "short",
+  "workbench.sideBar.location": "left",
+  "workbench.iconTheme": "easy-icons",
   "workbench.startupEditor": "none",
+
   // Window
   "window.title": "${dirty}${rootName} ${dirty}",
-  "window.newWindowDimensions": "fullscreen",
-  "window.restoreFullscreen": true,
-  "window.zoomLevel": 0,
+  "window.zoomLevel": 1,
+
   // Unsorted
   "search.collapseResults": "alwaysCollapse",
   "diffEditor.ignoreTrimWhitespace": true,
-  "debug.toolBarLocation": "docked",
-  "breadcrumbs.enabled": false,
   "explorer.sortOrder": "type",
+
+  // Debug
+  "debug.toolBarLocation": "docked",
+  "debug.console.wordWrap": false,
+
   // Editor
-  "editor.acceptSuggestionOnEnter": "off",
+  "editor.renderControlCharacters": true,
   "editor.scrollbar.vertical": "hidden",
-  "editor.overviewRulerBorder": false,
-  "editor.quickSuggestionsDelay": 100,
-  "editor.lineNumbers": "interval",
-  "editor.rulers": [110],
-  // Minimap
-  "editor.minimap.renderCharacters": false,
   "editor.minimap.showSlider": "always",
-  "editor.minimap.maxColumn": 230,
-  "editor.minimap.enabled": false, // Experimenting with not using a minimap to become more familiar with the code
+  "editor.overviewRulerBorder": false,
+  "editor.suggestSelection": "first",
+  "editor.lineNumbers": "interval",
+  "editor.minimap.maxColumn": 300,
   "editor.minimap.side": "left",
+  "editor.rulers": [ 110, 150 ],
+
+  // Terminal
+  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.scrollback": 50000,
+
   // Javascript
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "javascript.implicitProjectConfig.checkJs": true,
-  "workbench.activityBar.visible": true,
+
+  // Extension - Auto Hide
+  "autoHide.autoHideSideBar": false,
+  "autoHide.panelDelay": 0,
+
+  // Extension - VSIntellicode
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+
 }
