--- a/usersettings.json
+++ b/usersettings.json
@@ -40,9 +40,10 @@
   "editor.overviewRulerBorder": false,
   "editor.suggestSelection": "first",
   "editor.lineNumbers": "interval",
-  "editor.minimap.maxColumn": 300,
+  "editor.minimap.maxColumn": 80,
   "editor.minimap.side": "left",
   "editor.rulers": [ 110, 150 ],
+  "editor.minimap.scale": 2,
 
   // Terminal
   "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
